--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
-.App {
-  text-align: center;
+.login-box {
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  height: 75vh;
+  width: 70%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.login-image {
+  width: -webkit-fill-available;
+  height: 60vh;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media (max-width: 600px) {
+  .login-image {
+    width: -webkit-fill-available;
+    height: 35vh;
+  }
+  .login-box {
+    height: 100vh;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media (min-width: 601px) and (max-width: 740px) {
+  .login-image {
+    width: -webkit-fill-available;
+    height: 95vh;
   }
-  to {
-    transform: rotate(360deg);
+  .login-box {
+    height: 115vh;
   }
 }
