--- a/src/pages/dashboard/Layout.css
+++ b/src/pages/dashboard/Layout.css
@@ -4,10 +4,31 @@
 
 .content {
   flex: 1;
-  transition: margin-left 0.3s ease; /* Smooth transition for content width */
-  margin-left: 0; /* Default margin when sidebar is hidden */
+  transition: margin-left 0.3s ease;
+  margin-left: 0;
+  position: relative;
+  top: 64px;
 }
 
 .content-with-sidebar {
-  margin-left: 250px; /* Margin when sidebar is shown, should match the width of the sidebar */
+  margin-left: 250px;
+}
+.footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: #72acd4; /* Dark background */
+  color: #ffffff; /* Light text */
+  padding: 15px 0;
+  z-index: 1000;
+}
+
+.footer p {
+  margin: 0;
+}
+
+@media (max-width: 768px) {
+  .footer {
+    padding: 10px 0;
+  }
 }
