--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -5,3 +5,7 @@
     rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   border-radius: 20px;
 }
+
+.profile_dets {
+  background-color: #72acd4;
+}
