--- a/src/App.css
+++ b/src/App.css
@@ -123,3 +123,17 @@
 .pagination-icon:hover {
   color: #0056b3; /* Darker shade on hover */
 }
+.custom-datepicker {
+  z-index: 10000 !important;
+}
+
+.react-datepicker__portal {
+  z-index: 10000 !important;
+}
+
+.react-datepicker-popper {
+  z-index: 10000 !important;
+}
+.react-datepicker-wrapper {
+  width: 100%;
+}
